Fixed the styling on for the navigation on small screens

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,11 +100,8 @@ header{
   padding-bottom: 20px;
 }
 
-h1{
-  display:inline-block;
-}
-
 h1, ul.main-menu{
+  display: inline-block;
   text-align: left;
   margin-top: 0;
   padding-left:20px;
@@ -155,13 +152,13 @@ ul.main-menu a:hover {
 
 @media only screen and (min-width: 768px) {
 
-  h1{
-    text-align: center;
-    display:block;
+  h1, ul.main-menu{
+    width:200px;
+    margin: 0 auto;
   }
 
-  ul.main-menu{
-    margin: 0 1vh;
+  ul.main-menu li a{
+    width:200px;
   }
 
 }
